2011-09-19  Jessie Berlin  <jberlin@apple.com>

        Sites that use history pushState or replaceState are recorded in history in Private Browsing
        mode.
        https://bugs.webkit.org/show_bug.cgi?id=68208

        Reviewed by Brady Eidson.

        Add a test that the WKContextDidNavigateWithNavigationDataCallback (which is invoked by
        updateGlobalHistory) is not called in Private Browsing when the page does history.pushState.

        * TestWebKitAPI/Tests/WebKit2/PrivateBrowsingPushStateNoHistoryCallback.cpp: Added.
        (TestWebKitAPI::didNavigateWithNavigationData):
        This is a context history client callback, so it should not be called when in Private
        Browsing. Add a call to FAIL().
        (TestWebKitAPI::didSameDocumentNavigationForFrame):
        This is a page load client callback that happens after the didNavigateWithNavigationData
        callback. End the test.
        (TestWebKitAPI::TEST):
        Enable Private Browsing and load a page that uses history.pushState.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        Add PrivateBrowsingPushStateNoHistoryCallback.cpp and push-state.html.
        * TestWebKitAPI/Tests/WebKit2/push-state.html: Added.
        Ditto.
        * TestWebKitAPI/win/TestWebKitAPI.vcproj:
        Ditto.
        * TestWebKitAPI/win/copy-resources.cmd:
        Ditto.

2011-09-16  Elliot Poger  <epoger@google.com>

        add non-CG Webkit-Mac builds to flakiness dashboard
        https://bugs.webkit.org/show_bug.cgi?id=68265

        Reviewed by Adam Barth.

        As Chromium-on-Mac approaches the switchover from Core Graphics to
        Skia, we need to add the Skia version to the flakiness dashboard.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/config.js:
        * TestResultServer/static-dashboards/builders.js:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:
