@@ -1,3 +1,13 @@
+2011-09-19  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
+
+        Buildbot marks a nrwt bot red when tests are missing results
+        https://bugs.webkit.org/show_bug.cgi?id=64812
+
+        Reviewed by Ryosuke Niwa.
+
+        * Scripts/webkitpy/layout_tests/controllers/manager.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
+
 2011-09-19  Jessie Berlin  <jberlin@apple.com>
 
         Sites that use history pushState or replaceState are recorded in history in Private Browsing
